--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="cRedLight">#ff2525</color>
     <color name="cRedDark">#e41717</color>
     <color name="cRed">#ff0000</color>
+    <color name="cShadow">#20313131</color>
 </resources>
