--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -32,10 +32,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecView"
         android:orientation="horizontal"
+        android:paddingBottom="@dimen/dp10"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="20dp">
+        android:layout_weight="1">
 
     </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
