--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,5 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/cBlackLight</item>
         <item name="colorPrimaryVariant">@color/cBlackDark</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 </resources>
