Added fragments XML. Tmp

--- a/app/src/main/res/layout/lay_character.xml
+++ b/app/src/main/res/layout/lay_character.xml
@@ -1,42 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/plate"
+    android:orientation="vertical"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:background="@drawable/plate"
-        android:orientation="vertical"
-        android:gravity="center"
+    <ImageView
+        android:id="@+id/Image"
+        android:src="@drawable/incognito"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"/>
 
-        <ImageView
-            android:id="@+id/Image"
-            android:src="@drawable/anonym"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+    <View
+        android:background="@color/cRedLight"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"/>
 
-        <View
-            android:background="@color/cRedLight"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"/>
-
-        <TextView
-            android:id="@+id/Text"
-            android:background="@drawable/plate"
-            android:textColor="@color/cWhiteLight"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:maxLength="20"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="Anonymous"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/Text"
+        android:background="@drawable/plate"
+        style="@style/text_title"
+        android:textColor="@color/cWhiteLight"
+        android:maxLength="20"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/NoInformation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp10"
+        android:layout_marginBottom="@dimen/dp10"/>
 </LinearLayout>
