--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/cWhiteDark"
     android:orientation="vertical"
-    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,16 +17,8 @@
             android:src="@drawable/marvel_logo"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_marginTop="10dp"/>
-
-        <TextView
-            android:textColor="@color/cWhiteLight"
-            android:textStyle="bold"
-            android:textSize="12sp"
-            android:padding="5dp"
-            android:text="request: v1/public/characters"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_marginTop="@dimen/dp10"
+            android:layout_marginBottom="@dimen/dp10"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
