Work. Have a few bugs

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -107,13 +107,13 @@
                 style="@style/text_bold"
                 android:gravity="end"
                 android:padding="5dp"
-                android:text="First apperance:"
+                android:text="First appearance:"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"/>
 
             <TextView
-                android:id="@+id/FirstApperance"
+                android:id="@+id/FirstAppearance"
                 style="@style/text_main"
                 android:padding="5dp"
                 android:text="@string/NoInformation"
