--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/cWhiteLight"
     android:id="@+id/RecView"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/dp10"
