--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -10,15 +10,23 @@
         android:background="@color/cBlackLight"
         android:orientation="vertical"
         android:gravity="center"
+        android:paddingTop="@dimen/dp10"
+        android:paddingBottom="@dimen/dp10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:src="@drawable/marvel_logo"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="@dimen/dp10"
-            android:layout_marginBottom="@dimen/dp10"/>
+            android:layout_height="50dp"/>
+
+        <TextView
+            style="@style/text_bold"
+            android:textColor="@color/cWhiteLight"
+            android:text="REFRESH"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp5"/>
     </LinearLayout>
 
     <FrameLayout
