--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -29,6 +29,32 @@
                 style="@style/text_bold"
                 android:gravity="end"
                 android:padding="5dp"
+                android:text="ID:"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="50"/>
+
+            <TextView
+                android:id="@+id/Id"
+                style="@style/text_main"
+                android:padding="5dp"
+                android:text="@string/NoInformation"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="50"
+                android:layout_marginStart="@dimen/dp10"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:weightSum="100"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                style="@style/text_bold"
+                android:gravity="end"
+                android:padding="5dp"
                 android:text="Name:"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -55,13 +81,13 @@
                 style="@style/text_bold"
                 android:gravity="end"
                 android:padding="5dp"
-                android:text="Realname:"
+                android:text="Description:"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"/>
 
             <TextView
-                android:id="@+id/Realname"
+                android:id="@+id/Description"
                 style="@style/text_main"
                 android:padding="5dp"
                 android:text="@string/NoInformation"
@@ -81,91 +107,13 @@
                 style="@style/text_bold"
                 android:gravity="end"
                 android:padding="5dp"
-                android:text="Team:"
+                android:text="Comics:"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"/>
 
             <TextView
-                android:id="@+id/Team"
-                style="@style/text_main"
-                android:padding="5dp"
-                android:text="@string/NoInformation"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_marginStart="@dimen/dp10"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:weightSum="100"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/text_bold"
-                android:gravity="end"
-                android:padding="5dp"
-                android:text="First appearance:"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"/>
-
-            <TextView
-                android:id="@+id/FirstAppearance"
-                style="@style/text_main"
-                android:padding="5dp"
-                android:text="@string/NoInformation"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_marginStart="@dimen/dp10"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:weightSum="100"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/text_bold"
-                android:gravity="end"
-                android:padding="5dp"
-                android:text="Created by:"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"/>
-
-            <TextView
-                android:id="@+id/CreatedBy"
-                style="@style/text_main"
-                android:padding="5dp"
-                android:text="@string/NoInformation"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_marginStart="@dimen/dp10"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:weightSum="100"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/text_bold"
-                android:gravity="end"
-                android:padding="5dp"
-                android:text="Bio:"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"/>
-
-            <TextView
-                android:id="@+id/Bio"
+                android:id="@+id/Comics"
                 style="@style/text_main"
                 android:padding="5dp"
                 android:text="@string/NoInformation"
