--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -8,25 +8,52 @@
     <LinearLayout
         android:id="@+id/RefreshButton"
         android:background="@color/cBlackLight"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:gravity="center"
-        android:paddingTop="@dimen/dp10"
-        android:paddingBottom="@dimen/dp10"
+        android:padding="@dimen/dp10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:src="@drawable/marvel_logo"
+            android:adjustViewBounds="true"
             android:layout_width="wrap_content"
             android:layout_height="50dp"/>
 
-        <TextView
-            style="@style/text_bold"
-            android:textColor="@color/cWhiteLight"
-            android:text="REFRESH"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp5"/>
+        <RelativeLayout
+            android:background="@drawable/bottom_line"
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginStart="@dimen/dp10">
+
+            <EditText
+                android:id="@+id/Input"
+                android:background="@color/cNoColor"
+                style="@style/text_bold"
+                android:textColor="@color/cWhiteLight"
+                android:inputType="numberDecimal"
+                android:gravity="bottom"
+                android:padding="@dimen/dp5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/SearchButton"/>
+
+            <ImageView
+                android:id="@+id/SearchButton"
+                android:src="@drawable/search"
+                android:scaleType="fitEnd"
+                android:paddingStart="@dimen/dp10"
+                android:paddingEnd="0dp"
+                android:padding="@dimen/dp5"
+                android:layout_width="35dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
     </LinearLayout>
 
     <FrameLayout
