--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="cRedDark">#e41717</color>
     <color name="cRed">#ff0000</color>
     <color name="cShadow">#20313131</color>
+    <color name="cNoColor">#00000000</color>
 </resources>
