--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dp5">5dp</dimen>
     <dimen name="dp10">10dp</dimen>
+    <dimen name="dp20">20dp</dimen>
 </resources>
