--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,7 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/cWhiteLight"
-    android:id="@+id/RecView"
+    android:id="@+id/recycler_view"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/dp10"
     android:layout_width="match_parent"
