--- a/app/src/main/res/drawable/bottom_line.xml
+++ b/app/src/main/res/drawable/bottom_line.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/cWhiteLight" />
+            <solid android:color="@color/c_white_light" />
         </shape>
     </item>
     <item android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/cBlackLight" />
+            <solid android:color="@color/c_black_light" />
         </shape>
     </item>
 </layer-list>
