--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.TestApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/cBlackLight</item>
-        <item name="colorPrimaryVariant">@color/cBlackDark</item>
+        <item name="colorPrimary">@color/c_black_light</item>
+        <item name="colorPrimaryVariant">@color/c_black_dark</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
