--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -41,7 +41,7 @@
                 android:layout_marginStart="@dimen/dp10"
                 android:layout_weight="50"
                 android:padding="5dp"
-                android:text="@string/NoInformation" />
+                android:text="@string/no_information" />
         </LinearLayout>
 
         <LinearLayout
@@ -67,7 +67,7 @@
                 android:layout_marginStart="@dimen/dp10"
                 android:layout_weight="50"
                 android:padding="5dp"
-                android:text="@string/NoInformation" />
+                android:text="@string/no_information" />
         </LinearLayout>
 
         <LinearLayout
@@ -93,7 +93,7 @@
                 android:layout_marginStart="@dimen/dp10"
                 android:layout_weight="50"
                 android:padding="5dp"
-                android:text="@string/NoInformation" />
+                android:text="@string/no_information" />
         </LinearLayout>
 
         <LinearLayout
@@ -119,7 +119,7 @@
                 android:layout_marginStart="@dimen/dp10"
                 android:layout_weight="50"
                 android:padding="5dp"
-                android:text="@string/NoInformation" />
+                android:text="@string/no_information" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
