--- a/app/src/main/res/layout/lay_character.xml
+++ b/app/src/main/res/layout/lay_character.xml
@@ -28,7 +28,7 @@
         android:maxLength="20"
         android:gravity="center"
         android:padding="5dp"
-        android:text="@string/NoInformation"
+        android:text="@string/no_information"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp10"
