--- a/app/src/main/res/layout/lay_character.xml
+++ b/app/src/main/res/layout/lay_character.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/img_characterProfile"
         android:src="@drawable/image_not_found"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
@@ -21,7 +21,7 @@
         android:layout_height="5dp"/>
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/tv_characterName"
         android:background="@drawable/plate"
         style="@style/text_title"
         android:textColor="@color/c_white_light"
