--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -1,64 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lay_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/c_white_dark"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/c_black_light"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="@dimen/dp10">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:adjustViewBounds="true"
-            android:src="@drawable/marvel_logo" />
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/dp10"
-            android:layout_weight="1"
-            android:background="@drawable/bottom_line"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edt_search"
-                style="@style/text_bold"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/btn_search"
-                android:background="@color/c_transparent"
-                android:gravity="bottom"
-                android:inputType="numberDecimal"
-                android:padding="@dimen/dp5"
-                android:textColor="@color/c_white_light" />
-
-            <ImageView
-                android:id="@+id/btn_search"
-                android:layout_width="35dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/dp5"
-                android:paddingStart="@dimen/dp10"
-                android:paddingEnd="0dp"
-                android:scaleType="fitEnd"
-                android:src="@drawable/search" />
-        </RelativeLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/lay_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="100" />
-</LinearLayout>
+    android:background="@drawable/bg_marvel"
+    android:orientation="horizontal"
+    android:weightSum="100" />
