--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/image_not_found" />
+            android:src="@drawable/img_not_found" />
 
         <LinearLayout
             android:layout_width="match_parent"
