--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -19,20 +19,24 @@
         <EditText
             android:id="@+id/edt_search"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:layout_margin="@dimen/dp20"
             android:background="@drawable/bg_plate_circle"
+            android:imeOptions="actionSearch"
             android:inputType="numberDecimal"
-            android:padding="@dimen/dp10"
-            android:src="@drawable/ic_search"
-            android:visibility="gone"
+            android:maxLength="9"
+            android:paddingStart="@dimen/dp20"
+            android:paddingTop="@dimen/dp10"
+            android:paddingEnd="@dimen/dp20"
+            android:paddingBottom="@dimen/dp10"
+            android:scaleX="0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageView
             android:id="@+id/btn_search"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_margin="@dimen/dp20"
             android:background="@drawable/bg_circle"
             android:padding="@dimen/dp10"
