--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="dp0">0dp</dimen>
     <dimen name="dp5">5dp</dimen>
     <dimen name="dp10">10dp</dimen>
+    <dimen name="dp15">15dp</dimen>
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp200">200dp</dimen>
 </resources>
