--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -40,7 +40,7 @@
                 android:layout_marginStart="@dimen/dp10"
                 android:layout_weight="50"
                 android:padding="5dp"
-                android:text="@string/no_information" />
+                android:text="@string/data_not_found" />
         </LinearLayout>
 
         <LinearLayout
@@ -66,7 +66,7 @@
                 android:layout_marginStart="@dimen/dp10"
                 android:layout_weight="50"
                 android:padding="5dp"
-                android:text="@string/no_information" />
+                android:text="@string/data_not_found" />
         </LinearLayout>
 
         <LinearLayout
@@ -92,7 +92,7 @@
                 android:layout_marginStart="@dimen/dp10"
                 android:layout_weight="50"
                 android:padding="5dp"
-                android:text="@string/no_information" />
+                android:text="@string/data_not_found" />
         </LinearLayout>
 
         <LinearLayout
@@ -118,7 +118,7 @@
                 android:layout_marginStart="@dimen/dp10"
                 android:layout_weight="50"
                 android:padding="5dp"
-                android:text="@string/no_information" />
+                android:text="@string/data_not_found" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
