--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,14 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
     <style name="Theme.MarvelApp" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/c_black_light</item>
-        <item name="colorPrimaryVariant">@color/c_black_dark</item>
+        <item name="android:statusBarColor">@color/c_black_dark</item>
+        <item name="android:windowBackground">@color/c_white_light</item>
+    </style>
 
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
-        <item name="android:windowBackground">?attr/colorPrimaryVariant</item>
+    <style name="Theme.MarvelApp.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/c_black_dark</item>
+        <item name="windowSplashScreenAnimatedIcon">@color/c_black_dark</item>
+        <item name="windowSplashScreenAnimationDuration">200</item>
+        <item name="postSplashScreenTheme">@style/Theme.MarvelApp</item>
     </style>
 </resources>
